# solitaire

./: solitaire.cabal
src/: Main.hs
