name:                solitaire
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/solitaire#readme
license:             BSD3
license-file:        LICENSE
author:              Henry Nelson
maintainer:          hcnelson99@gmail.com
copyright:           2017 Henry Nelson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable solitaire
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       lens,
                       MonadRandom,
                       random-shuffle
